Add example based schema generator

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,6 @@ SSL_KEY_LOCATION=
 SCHEMA_REGISTRY_URL=
 SCHEMA_REGISTRY_USERNAME=
 SCHEMA_REGISTRY_PASSWORD=
+
+# OpenAI API key to infer schemas from sample records
+OPENAI_API_KEY=
